--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
 }
 
 .App-header {
-  background-color: gray;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,6 +17,7 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-footer {
+  text-align: center;
+  margin: 30px 0;
 }
